<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sony.sharedpreferencescrud.ui.activities.MainActivity">

    <EditText
        android:id="@+id/edit_text_id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_put_id"/>
    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_put_name"
        android:layout_below="@id/edit_text_id"/>
    <EditText
        android:id="@+id/edit_text_surname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_put_surname"
        android:layout_below="@id/edit_text_name"/>
    <EditText
        android:id="@+id/edit_text_phone_number"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_put_phone_number"
        android:layout_below="@id/edit_text_surname"/>
    <EditText
        android:id="@+id/edit_text_mail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_put_mail"
        android:layout_below="@id/edit_text_phone_number"/>
    <EditText
        android:id="@+id/edit_text_skype"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_put_skype"
        android:layout_below="@id/edit_text_mail"/>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/txt_Save"/>
</RelativeLayout>
